2012-03-05  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/ui/editors/AutoconfMacro.java (equals): Fix
	FindBugs error with missing null case.
	(hashCode): New method to fix FindBugs error.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/AutomakeEditor.java (AutomakeEditor): Fix
	constructor to remove static variable. 
	(static initializer): Fix FindBugs error with static variable usage.
	
2012-02-28  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #371277
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/actions/InvokeAction.java (..run): Use sh -c to execute
	the autotool scripts.

2011-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/preferences/AutoconfEditorPreferencePage.java (fACVersions): Add
	2.68.
	(fAMVersions): Add 1.11.1.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/text/hover/AutoconfTextHover.java (getIndexedInfoFromDocument): Fix
	code to not compare StringBuffer directly with empty string.
	(getAMDoc): Fix code to use UI plugin for getting local data files.
	(getACDoc): Ditto.
	* macros/ammacros-1.11.1.xml: New file.
	* macros/acmacros-2.68.xml: New file.
	* macros/GFDL-1.3.html: New file.

2011-09-23  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/properties/AutotoolsCategoryPropertyOptionPage.java (createFieldEditors): Add
	flag value support.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/properties/AutotoolsConfigurePrefStore.java (getBoolean): Modify for
	flag value support.

2011-09-19  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/properties/ToolListContentProvider.java (getElements): Add check for
	null.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/StaticTargetRule.java (setPrerequisitePatterns): Fix
	typo in name.