@@ -1,3 +1,13 @@
+2012-03-07  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/AutomakeEditor.java (AutomakeEditor): Make constructor
+	public so openEditor will work.
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/AutomakeErrorHandler.java (AutomakeErrorHandler): Change constructor
+	to accept an IEditorInput rather than an IDocument. 
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/AutomakefileReconcilingStrategy.java (AutomakefileReconcilingStrategy): Pass
+	an IEditorInput to create the AutomakeErrorHandler.
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/AutomakeDocumentProvider.java (connect): Ditto.
+	 
 2012-03-05  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* src/org/eclipse/linuxtools/cdt/autotools/ui/editors/AutoconfMacro.java (equals): Fix
